--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.1.0",
     "prettier": "^3.5.3"
+  },
+  "dependencies": {
+    "react-router-dom": "^7.6.0"
   }
 }
