--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,8 @@
     "express": "^5.1.0",
     "node-cache": "^5.1.2",
     "puppeteer": "^24.8.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
