--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nivo/core": "^0.95.0",
     "@nivo/radar": "^0.95.0",
+    "framer-motion": "^12.11.0",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
