--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "postinstall": "pnpm dlx puppeteer browsers install chrome"
   },
   "keywords": [],
   "author": "",
