--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write .",
-    "build": "cd client && pnpm run build",
+    "build": "cd client && pnpm run build && cd ../server && pnpm dlx puppeteer browsers install",
     "dev": "pnpm run -r dev"
   },
   "keywords": [],
